# geometric-shapes

./: .gitignore  CMakeLists.txt  Readme.md
src/: GeometricShape.cpp  GeometricShape.h  Point.cpp  Point.h  Processing.cpp  Processing.h  Rectangle.cpp  Rectangle.h  ShapeCalculationHandler.cpp  ShapeCalculationHandler.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  geometric_shape.cpp  geometric_shape.h  main.cpp
